<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/addStatement"
        android:title="@string/add_statement"
        android:enabled="true"/>
    <item
        android:title="@string/used_statement"
        android:id="@+id/usedStatement"
        android:enabled="true"/>
    <item
        android:enabled="true"
        android:id="@+id/allStatement"
        android:title="@string/allStatement"
        />
    <item
        android:title="@string/add"
        android:id="@+id/addV"
        android:enabled="true"
        />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:enabled="true"/>
    <item
        android:id="@+id/resetDate"

        android:enabled="true"
        android:title="@string/reset_data"/>


</menu>