<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <HorizontalScrollView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/states"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:visibility="gone">


                <ImageButton
                    android:layout_toRightOf="@+id/rema"
                    android:layout_toEndOf="@id/rema"
                    android:id="@+id/sendToX"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/xls" />

                <TextView
                    android:id="@+id/currbl"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/prevbl"
                    android:layout_toRightOf="@+id/prevbl"
                    android:background="@drawable/black_border"
                    android:gravity="center"
                    android:text="@string/current_balance"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/addused"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/currbl"
                    android:layout_toRightOf="@id/currbl"
                    android:background="@drawable/black_border"
                    android:gravity="center"
                    android:text="@string/add_used"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/datetime"
                    android:layout_width="150dp"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/addused"
                    android:layout_toRightOf="@+id/addused"
                    android:background="@drawable/black_border"
                    android:gravity="center"
                    android:text="@string/dates"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


                <TextView
                    android:id="@+id/rema"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_toEndOf="@+id/datetime"
                    android:layout_toRightOf="@+id/datetime"
                    android:background="@drawable/black_border"
                    android:gravity="center"
                    android:text="@string/remarks"
                    android:textColor="@color/black"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/prevbl"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:background="@drawable/black_border"
                    android:gravity="center"
                    android:text="@string/previous_balance"
                    android:textColor="@color/black"
                    android:textSize="12sp" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/statements"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rema"
                    android:layout_margin="2dp"
                    android:padding="5dp">

                </androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>
        </HorizontalScrollView>

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/previousb"
                android:layout_margin="5dp"
                android:padding="5dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/add"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/remarks"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/green_border"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/use"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/remarks"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="3dp"
                        android:layout_toEndOf="@+id/add"
                        android:layout_toRightOf="@+id/add"
                        android:background="@drawable/red_border"
                        android:gravity="center"
                        android:text="@string/use"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/addAmt"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_toEndOf="@+id/addb"
                        android:layout_toRightOf="@+id/addb"
                        android:background="@drawable/black_border"
                        android:hint="@string/add_balance"
                        android:inputType="numberDecimal"
                        android:keepScreenOn="false"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/remarksC"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/addb"
                        android:layout_marginTop="3dp"
                        android:layout_toEndOf="@+id/addb"
                        android:layout_toRightOf="@+id/addb"
                        android:background="@drawable/black_border"
                        android:hint="@string/add_remarks"
                        android:inputType="textShortMessage"
                        android:keepScreenOn="false"
                        android:paddingStart="20dp"
                        android:paddingLeft="20dp"
                        android:paddingEnd="10dp"
                        android:paddingRight="10dp" />

                    <com.google.android.material.textview.MaterialTextView

                        android:id="@+id/remarks"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_below="@id/addb"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/black_border"
                        android:gravity="center"
                        android:text="@string/remarks"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <com.google.android.material.textview.MaterialTextView

                        android:id="@+id/addb"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:background="@drawable/black_border"
                        android:gravity="center"
                        android:text="@string/add"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/currentb"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toEndOf="@+id/cb"
                android:layout_toRightOf="@+id/cb"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/pb"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_below="@+id/cb"
                android:layout_marginTop="3dp"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:text="@string/previous_balance"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/previousb"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/cb"
                android:layout_marginTop="3dp"
                android:layout_toEndOf="@+id/cb"
                android:layout_toRightOf="@+id/cb"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/cb"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:background="@drawable/black_border"
                android:gravity="center"
                android:text="@string/current_balance"

                android:textColor="@color/black"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>